--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3310/faDB
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/faDB
 spring.datasource.username=faUser
-spring.datasource.password=faPsw
+spring.datasource.password=faPsw?_1asdf
 
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=15
+server.port=8082
 
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=true
